metadata/sf-prod/force-app/main/default/objects/Contract_Review__c/Contract_Review__c.object-meta.xml
<CustomObject>
    <label>Contract Review</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract Reviews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>