metadata/sf-prod/force-app/main/default/objects/Contract_Review__c/fields/AR_Period_60_days__c.field-meta.xml
<CustomField>
    <fullName>AR_Period_60_days__c</fullName>
    <formula>Has_Auto_Renewal_Clause__c &amp;&amp; Customer_Non_Renewal_Notice_Period__c &lt; 60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AR Period &lt; 60 days</label>
    <type>Checkbox</type>
</CustomField>