metadata/sf-prod/force-app/main/default/objects/Contract_Review__c/fields/Auto_Renewal_Custom_Term__c.field-meta.xml
<CustomField>
    <fullName>Auto_Renewal_Custom_Term__c</fullName>
    <description># Months</description>
    <inlineHelpText># Months</inlineHelpText>
    <label>Auto-Renewal Custom Term</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>