metadata/sf-prod/force-app/main/default/objects/Contract_Review__c/fields/Auto_Renewal_Limitations__c.field-meta.xml
<CustomField>
    <fullName>Auto_Renewal_Limitations__c</fullName>
    <formula>LOWER(Auto_Renewal_Price__c) != &apos;then current&apos; || !ISBLANK(Auto_Renewal_Custom_Term__c) || !ISBLANK(Provider_Auto_Renewal_Notice_Period__c) || !ISBLANK( Provider_Auto_Renewal_Notice_Requirement__c)</formula>
    <label>Auto-Renewal Limitations</label>
    <type>Checkbox</type>
</CustomField>