metadata/sf-prod/force-app/main/default/objects/Contract_Review__c/fields/Auto_Renewal_Price__c.field-meta.xml
<CustomField>
    <fullName>Auto_Renewal_Price__c</fullName>
    <label>Auto-Renewal Price</label>
    <length>255</length>
    <type>Text</type>
</CustomField>