metadata/sf-prod/force-app/main/default/objects/Contract_Review__c/fields/Can_cust_terminate_at_change_of_control__c.field-meta.xml
<CustomField>
    <fullName>Can_cust_terminate_at_change_of_control__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Can customer terminate the contract at change of control?</description>
    <inlineHelpText>Can customer terminate the contract at change of control?</inlineHelpText>
    <label>Can cust terminate at change of control?</label>
    <type>Checkbox</type>
</CustomField>