metadata/sf-prod/force-app/main/default/objects/Contract_Review__c/fields/Can_customer_terminate_at_convenience__c.field-meta.xml
<CustomField>
    <fullName>Can_customer_terminate_at_convenience__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Can customer terminate the contract at convenience?</description>
    <inlineHelpText>Can customer terminate the contract at convenience?</inlineHelpText>
    <label>Can customer terminate at convenience?</label>
    <type>Checkbox</type>
</CustomField>