metadata/sf-prod/force-app/main/default/objects/Contract_Review__c/fields/Caps_on_Renewal_Price__c.field-meta.xml
<CustomField>
    <fullName>Caps_on_Renewal_Price__c</fullName>
    <label>Caps on Renewal Price</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Flat/Expiring ARR</fullName>
            </value>
            <value>
                <fullName>Predefined</fullName>
            </value>
            <value>
                <fullName>Fixed %</fullName>
            </value>
            <value>
                <fullName>Fixed Amount</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>