metadata/sf-prod/force-app/main/default/objects/Contract_Review__c/fields/Contract_End_date__c.field-meta.xml
<CustomField>
    <fullName>Contract_End_date__c</fullName>
    <description>The end date of most recent signed quote or auto-renewal</description>
    <inlineHelpText>The end date of most recent signed quote or auto-renewal</inlineHelpText>
    <label>Contract End Date</label>
    <type>Date</type>
</CustomField>