metadata/sf-prod/force-app/main/default/objects/Contract_Review__c/fields/Contract_Lanaguage_not_English__c.field-meta.xml
<CustomField>
    <fullName>Contract_Lanaguage_not_English__c</fullName>
    <formula>Contract_Language__c != &apos;English&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Lanaguage not English</label>
    <type>Checkbox</type>
</CustomField>