metadata/sf-prod/force-app/main/default/objects/Contract_Review__c/fields/Contract_Language__c.field-meta.xml
<CustomField>
    <fullName>Contract_Language__c</fullName>
    <label>Contract Language</label>
    <length>80</length>
    <type>Text</type>
</CustomField>