metadata/sf-prod/force-app/main/default/objects/Contract_Review__c/fields/Contract_Law_Country__c.field-meta.xml
<CustomField>
    <fullName>Contract_Law_Country__c</fullName>
    <label>Contract Law Country</label>
    <length>100</length>
    <type>Text</type>
</CustomField>