metadata/sf-prod/force-app/main/default/objects/Contract_Review__c/fields/Contract_Law_State__c.field-meta.xml
<CustomField>
    <fullName>Contract_Law_State__c</fullName>
    <label>Contract Law State</label>
    <length>2</length>
    <type>Text</type>
</CustomField>