metadata/sf-prod/force-app/main/default/objects/Contract_Review__c/fields/Contract_Notice_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Contract_Notice_Requirements__c</fullName>
    <label>Contract Notice Requirements</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>