metadata/sf-prod/force-app/main/default/objects/Contract_Review__c/fields/Contract_Term__c.field-meta.xml
<CustomField>
    <fullName>Contract_Term__c</fullName>
    <description># of Months</description>
    <inlineHelpText># of Months</inlineHelpText>
    <label>Contract Term</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>