metadata/sf-prod/force-app/main/default/objects/Contract_Review__c/fields/Customer_Contract_Extension_Right__c.field-meta.xml
<CustomField>
    <fullName>Customer_Contract_Extension_Right__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Contract Extension Right</label>
    <type>Checkbox</type>
</CustomField>