metadata/sf-prod/force-app/main/default/objects/Contract_Review__c/fields/Customer_Right_to_Reduce_Entitlements__c.field-meta.xml
<CustomField>
    <fullName>Customer_Right_to_Reduce_Entitlements__c</fullName>
    <label>Customer Right to Reduce Entitlements</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Never</fullName>
            </value>
            <value>
                <fullName>During Term</fullName>
            </value>
            <value>
                <fullName>At Renewal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>