metadata/sf-prod/force-app/main/default/objects/Contract_Review__c/fields/Customer_Termination_for_Convenience__c.field-meta.xml
<CustomField>
    <fullName>Customer_Termination_for_Convenience__c</fullName>
    <formula>Can_customer_terminate_at_convenience__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Termination for Convenience</label>
    <type>Checkbox</type>
</CustomField>