metadata/sf-prod/force-app/main/default/objects/Contract_Review__c/fields/Customer_Termination_Refund_Prepaid_Fees__c.field-meta.xml
<CustomField>
    <fullName>Customer_Termination_Refund_Prepaid_Fees__c</fullName>
    <description>Provider must refund prepaid fees</description>
    <inlineHelpText>Provider must refund prepaid fees</inlineHelpText>
    <label>Customer Termination Refund Prepaid Fees</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>