metadata/sf-prod/force-app/main/default/objects/Contract_Review__c/fields/Direct_liability_disclaimer__c.field-meta.xml
<CustomField>
    <fullName>Direct_liability_disclaimer__c</fullName>
    <description>Direct liability disclaimer</description>
    <formula>ISBLANK(Indemnifiable_losses_liability_limit__c) || !Limitation_of_liability__c</formula>
    <inlineHelpText>Direct liability disclaimer</inlineHelpText>
    <label>Direct liability disclaimer</label>
    <type>Checkbox</type>
</CustomField>