metadata/sf-prod/force-app/main/default/objects/Contract_Review__c/fields/Disclaimer_of_Indirect_Damages__c.field-meta.xml
<CustomField>
    <fullName>Disclaimer_of_Indirect_Damages__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disclaimer of Indirect Damages</label>
    <type>Checkbox</type>
</CustomField>