metadata/sf-prod/force-app/main/default/objects/Contract_Review__c/fields/Exclusion_of_limitation_of_liability__c.field-meta.xml
<CustomField>
    <fullName>Exclusion_of_limitation_of_liability__c</fullName>
    <description>Exclusion of limitation of liability for anything other than: 1) Gross Negligence, 2) Wilful Misconduct, 3) Direct damages due to infringement of either party&apos;s IP rights, 4) any other liability that can&apos;t lawfully be excluded.</description>
    <inlineHelpText>Exclusion of limitation of liability for anything other than: 1) Gross Negligence, 2) Wilful Misconduct, 3) Direct damages due to infringement of either party&apos;s IP rights, 4) any other liability that can&apos;t lawfully be excluded.</inlineHelpText>
    <label>Exclusion of limitation of liability</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>