metadata/sf-prod/force-app/main/default/objects/Contract_Review__c/fields/Exclusive_Jurisdiction__c.field-meta.xml
<CustomField>
    <fullName>Exclusive_Jurisdiction__c</fullName>
    <label>Exclusive Jurisdiction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>