metadata/sf-prod/force-app/main/default/objects/Contract_Review__c/fields/Federal_government_contract__c.field-meta.xml
<CustomField>
    <fullName>Federal_government_contract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Federal government contract</label>
    <type>Checkbox</type>
</CustomField>