metadata/sf-prod/force-app/main/default/objects/Contract_Review__c/fields/Government_Contract__c.field-meta.xml
<CustomField>
    <fullName>Government_Contract__c</fullName>
    <formula>Federal_government_contract__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Government Contract</label>
    <type>Checkbox</type>
</CustomField>