metadata/sf-prod/force-app/main/default/objects/Contract_Review__c/fields/Has_Auto_Renewal_Clause__c.field-meta.xml
<CustomField>
    <fullName>Has_Auto_Renewal_Clause__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Auto-Renewal Clause?</label>
    <type>Checkbox</type>
</CustomField>