metadata/sf-prod/force-app/main/default/objects/Contract_Review__c/fields/Impaired_Termination_Rights__c.field-meta.xml
<CustomField>
    <fullName>Impaired_Termination_Rights__c</fullName>
    <formula>Provider_Lock_in_Period__c &gt; 0 ||
Provider_Notice_Period_Not_To_Renew__c &gt; 180</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Impaired Termination Rights</label>
    <type>Checkbox</type>
</CustomField>