metadata/sf-prod/force-app/main/default/objects/Contract_Review__c/fields/Impediment_to_25_35_45__c.field-meta.xml
<CustomField>
    <fullName>Impediment_to_25_35_45__c</fullName>
    <formula>Customer_Contract_Extension_Right__c || !ISBLANK(TEXT(Caps_on_Renewal_Price__c)) || !ISPICKVAL(Customer_Right_to_Reduce_Entitlements__c,&apos;At Renewal&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Impediment to 25/35/45</label>
    <type>Checkbox</type>
</CustomField>