metadata/sf-prod/force-app/main/default/objects/Contract_Review__c/fields/Indemnifiable_losses_liability_limit__c.field-meta.xml
<CustomField>
    <fullName>Indemnifiable_losses_liability_limit__c</fullName>
    <label>Indemnifiable losses liability limit</label>
    <length>250</length>
    <type>Text</type>
</CustomField>