metadata/sf-prod/force-app/main/default/objects/Contract_Review__c/fields/Indemnity_Loss_Limit_Liability_Amount__c.field-meta.xml
<CustomField>
    <fullName>Indemnity_Loss_Limit_Liability_Amount__c</fullName>
    <description>Indemnifiable losses liability limit $ amount</description>
    <inlineHelpText>Indemnifiable losses liability limit $ amount</inlineHelpText>
    <label>Indemnity Loss Limit Liability Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>