metadata/sf-prod/force-app/main/default/objects/Contract_Review__c/fields/Latest_Signed_Quote_Paper__c.field-meta.xml
<CustomField>
    <fullName>Latest_Signed_Quote_Paper__c</fullName>
    <label>Latest Signed Quote Paper</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Paper_Type</valueSetName>
    </valueSet>
</CustomField>