metadata/sf-prod/force-app/main/default/objects/Contract_Review__c/fields/Latest_Signed_Quote_Version__c.field-meta.xml
<CustomField>
    <fullName>Latest_Signed_Quote_Version__c</fullName>
    <label>Latest Signed Quote Version</label>
    <length>50</length>
    <type>Text</type>
</CustomField>