metadata/sf-prod/force-app/main/default/objects/Contract_Review__c/fields/Limitation_of_liability__c.field-meta.xml
<CustomField>
    <fullName>Limitation_of_liability__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Limitation of liability (even if notified)</description>
    <inlineHelpText>Limitation of liability (even if notified)</inlineHelpText>
    <label>Limitation of liability</label>
    <type>Checkbox</type>
</CustomField>