metadata/sf-prod/force-app/main/default/objects/Contract_Review__c/fields/Master_Agreement_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Master_Agreement_Effective_Date__c</fullName>
    <label>Master Agreement Effective Date</label>
    <type>Date</type>
</CustomField>