metadata/sf-prod/force-app/main/default/objects/Contract_Review__c/fields/Master_Agreement_Paper__c.field-meta.xml
<CustomField>
    <fullName>Master_Agreement_Paper__c</fullName>
    <label>Master Agreement Paper</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Paper_Type</valueSetName>
    </valueSet>
</CustomField>