metadata/sf-prod/force-app/main/default/objects/Contract_Review__c/fields/Master_Agreement_Version__c.field-meta.xml
<CustomField>
    <fullName>Master_Agreement_Version__c</fullName>
    <label>Master Agreement Version</label>
    <length>50</length>
    <type>Text</type>
</CustomField>