metadata/sf-prod/force-app/main/default/objects/Contract_Review__c/fields/MFN_Clause_affiliates__c.field-meta.xml
<CustomField>
    <fullName>MFN_Clause_affiliates__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MFN Clause - affiliates</label>
    <type>Checkbox</type>
</CustomField>