metadata/sf-prod/force-app/main/default/objects/Contract_Review__c/fields/NetSuite_ID__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_ID__c</fullName>
    <externalId>true</externalId>
    <label>NetSuite ID</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>