metadata/sf-prod/force-app/main/default/objects/Contract_Review__c/fields/No_Auto_Renewal_Clause__c.field-meta.xml
<CustomField>
    <fullName>No_Auto_Renewal_Clause__c</fullName>
    <formula>!Has_Auto_Renewal_Clause__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No Auto-Renewal Clause</label>
    <type>Checkbox</type>
</CustomField>