metadata/sf-prod/force-app/main/default/objects/Contract_Review__c/fields/No_disclaimer_of_Indirect_Damages__c.field-meta.xml
<CustomField>
    <fullName>No_disclaimer_of_Indirect_Damages__c</fullName>
    <formula>!Disclaimer_of_Indirect_Damages__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No disclaimer of Indirect Damages</label>
    <type>Checkbox</type>
</CustomField>