metadata/sf-prod/force-app/main/default/objects/Contract_Review__c/fields/Non_ESW_Paper__c.field-meta.xml
<CustomField>
    <fullName>Non_ESW_Paper__c</fullName>
    <formula>!ISPICKVAL(Master_Agreement_Paper__c,&apos;ESW Std&apos;) || !ISPICKVAL(Latest_Signed_Quote_Paper__c, &apos;ESW Std&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Non-ESW Paper</label>
    <type>Checkbox</type>
</CustomField>