metadata/sf-prod/force-app/main/default/objects/Contract_Review__c/fields/Non_standard_Contract_Term__c.field-meta.xml
<CustomField>
    <fullName>Non_standard_Contract_Term__c</fullName>
    <formula>Contract_Term__c != 12 &amp;&amp; Contract_Term__c != 36 &amp;&amp; Contract_Term__c != 60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Non-standard Contract Term</label>
    <type>Checkbox</type>
</CustomField>