metadata/sf-prod/force-app/main/default/objects/Contract_Review__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Contract_Review_Statuses</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>