metadata/sf-prod/force-app/main/default/objects/Contract_Review__c/fields/Price_increase_notice_requirement__c.field-meta.xml
<CustomField>
    <fullName>Price_increase_notice_requirement__c</fullName>
    <formula>!ISBLANK(Provider_Price_Change_Notice_Period__c) || !ISBLANK(Provider_Price_Change_Notice_Requirement__c)</formula>
    <label>Price increase notice requirement</label>
    <type>Checkbox</type>
</CustomField>