metadata/sf-prod/force-app/main/default/objects/Contract_Review__c/fields/Provider_Auto_Renewal_Notice_Period__c.field-meta.xml
<CustomField>
    <fullName>Provider_Auto_Renewal_Notice_Period__c</fullName>
    <description># Days</description>
    <inlineHelpText># Days</inlineHelpText>
    <label>Provider Auto-Renewal Notice Period</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>