metadata/sf-prod/force-app/main/default/objects/Contract_Review__c/fields/Provider_Auto_Renewal_Notice_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Provider_Auto_Renewal_Notice_Requirement__c</fullName>
    <label>Provider Auto-Renewal Notice Requirement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>