metadata/sf-prod/force-app/main/default/objects/Contract_Review__c/fields/Provider_has_right_NOT_to_renew__c.field-meta.xml
<CustomField>
    <fullName>Provider_has_right_NOT_to_renew__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Provider has right NOT to renew</label>
    <type>Checkbox</type>
</CustomField>