metadata/sf-prod/force-app/main/default/objects/Contract_Review__c/fields/Provider_Lock_in_Period__c.field-meta.xml
<CustomField>
    <fullName>Provider_Lock_in_Period__c</fullName>
    <description># Years</description>
    <inlineHelpText># Years</inlineHelpText>
    <label>Provider Lock-in Period</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>