metadata/sf-prod/force-app/main/default/objects/Contract_Review__c/fields/Provider_non_renewal_notice_requirements__c.field-meta.xml
<CustomField>
    <fullName>Provider_non_renewal_notice_requirements__c</fullName>
    <label>Provider non-renewal notice requirements</label>
    <length>255</length>
    <type>Text</type>
</CustomField>