metadata/sf-prod/force-app/main/default/objects/Contract_Review__c/fields/Provider_Notice_Period_Not_To_Renew__c.field-meta.xml
<CustomField>
    <fullName>Provider_Notice_Period_Not_To_Renew__c</fullName>
    <description># Days</description>
    <inlineHelpText># Days</inlineHelpText>
    <label>Provider Notice Period NOT to Renew</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>