metadata/sf-prod/force-app/main/default/objects/Contract_Review__c/fields/Provider_Price_Change_Notice_Period__c.field-meta.xml
<CustomField>
    <fullName>Provider_Price_Change_Notice_Period__c</fullName>
    <description># of Days</description>
    <inlineHelpText># of Days</inlineHelpText>
    <label>Provider Price Change Notice Period</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>