metadata/sf-prod/force-app/main/default/objects/Contract_Review__c/fields/Provider_Price_Change_Notice_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Provider_Price_Change_Notice_Requirement__c</fullName>
    <description>if different from general requirements</description>
    <inlineHelpText>if different from general requirements</inlineHelpText>
    <label>Provider Price Change Notice Requirement</label>
    <type>TextArea</type>
</CustomField>