metadata/sf-prod/force-app/main/default/objects/Contract_Review__c/fields/Red_Flags_Warning__c.field-meta.xml
<CustomField>
    <fullName>Red_Flags_Warning__c</fullName>
    <description>Show Red if any Red Flag is true</description>
    <formula>IMAGE(IF(Red_Flags__c,&quot;/img/samples/color_red.gif&quot;,&quot;/img/samples/color_green.gif&quot;),&quot;Color&quot;, 20,40)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Show Red if any Red Flag is true</inlineHelpText>
    <label>Red Flags Warning</label>
    <type>Text</type>
</CustomField>