metadata/sf-prod/force-app/main/default/objects/Contract_Review__c/fields/Refund_right_other_than_IP_indemnity__c.field-meta.xml
<CustomField>
    <fullName>Refund_right_other_than_IP_indemnity__c</fullName>
    <formula>Customer_Termination_Refund_Prepaid_Fees__c &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Refund right other than IP indemnity</label>
    <type>Checkbox</type>
</CustomField>