metadata/sf-prod/force-app/main/default/objects/Contract_Review__c/fields/Restriction_on_moving_cont_to_affiliate__c.field-meta.xml
<CustomField>
    <fullName>Restriction_on_moving_cont_to_affiliate__c</fullName>
    <description>Restriction on moving contract to an affiliate</description>
    <formula>(!ISBLANK(TEXT(Transfer_of_rights_by_provider__c)) &amp;&amp; !ISPICKVAL(Transfer_of_rights_by_provider__c, &apos;Unrestricted&apos;)) ||
ISPICKVAL(Use_of_foreign_entities_as_affiliates__c, &apos;Not Allowed&apos;) || ISPICKVAL(Use_of_foreign_entities_as_affiliates__c, &apos;Allowed w/ notice&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Restriction on moving contract to an affiliate</inlineHelpText>
    <label>Restriction on moving cont. to affiliate</label>
    <type>Checkbox</type>
</CustomField>