metadata/sf-prod/force-app/main/default/objects/Contract_Review__c/fields/Restriction_on_new_buyer__c.field-meta.xml
<CustomField>
    <fullName>Restriction_on_new_buyer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Restriction on new buyer acting under contract after a change of control at Provider</description>
    <inlineHelpText>Restriction on new buyer acting under contract after a change of control at Provider</inlineHelpText>
    <label>Restriction on new buyer</label>
    <type>Checkbox</type>
</CustomField>