metadata/sf-prod/force-app/main/default/objects/Contract_Review__c/fields/Transfer_of_rights_by_provider__c.field-meta.xml
<CustomField>
    <fullName>Transfer_of_rights_by_provider__c</fullName>
    <description>Transfer of rights or obligations to an affiliate/subcontractor by Provider</description>
    <inlineHelpText>Transfer of rights or obligations to an affiliate/subcontractor by Provider</inlineHelpText>
    <label>Transfer of rights by provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unrestricted</fullName>
            </value>
            <value>
                <fullName>With consent</fullName>
            </value>
            <value>
                <fullName>Disallowed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>