metadata/sf-prod/force-app/main/default/objects/Contract_Review__c/fields/Undesirable_Law_or_Jurisdiction__c.field-meta.xml
<CustomField>
    <fullName>Undesirable_Law_or_Jurisdiction__c</fullName>
    <formula>!CONTAINS(&quot;:US:USA:&quot;,&quot;:&quot; &amp; Contract_Law_Country__c &amp; &quot;:&quot;) || !CONTAINS(&quot;:TX:NV:IL:WA:MD:&quot;,&quot;:&quot; &amp; Contract_Law_State__c &amp; &quot;:&quot;) || (!ISBLANK(Exclusive_Jurisdiction__c) &amp;&amp; !CONTAINS(&quot;:Travis County:TX:USA:US:&quot;,&quot;:&quot; &amp;  Exclusive_Jurisdiction__c &amp; &quot;:&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Undesirable Law or Jurisdiction</label>
    <type>Checkbox</type>
</CustomField>