metadata/sf-prod/force-app/main/default/objects/Contract_Review__c/fields/Unlimited_liability_carve_outs__c.field-meta.xml
<CustomField>
    <fullName>Unlimited_liability_carve_outs__c</fullName>
    <description>Unlimited liability carve-outs other than for IP infringement, gross negligence/willful misconduct</description>
    <formula>Exclusive_Jurisdiction__c != &apos;No&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Unlimited liability carve-outs other than for IP infringement, gross negligence/willful misconduct</inlineHelpText>
    <label>Unlimited liability carve-outs</label>
    <type>Checkbox</type>
</CustomField>