metadata/sf-prod/force-app/main/default/objects/Contract_Review__c/fields/Use_of_foreign_entities_as_affiliates__c.field-meta.xml
<CustomField>
    <fullName>Use_of_foreign_entities_as_affiliates__c</fullName>
    <description>Use of foreign entities as affiliates / subcontractors</description>
    <inlineHelpText>Use of foreign entities as affiliates / subcontractors</inlineHelpText>
    <label>Use of foreign entities as affiliates</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Allowed</fullName>
            </value>
            <value>
                <fullName>Allowed w/ notice</fullName>
            </value>
            <value>
                <fullName>Allowed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>