metadata/sf-prod/force-app/main/default/objects/Contract_Review__c/fields/X15_Days_Before_Notice_Period_Date__c.field-meta.xml
<CustomField>
    <fullName>X15_Days_Before_Notice_Period_Date__c</fullName>
    <description>Formula field that contains the date that is 15 days before the provider notice period not to renew. This is used in the reports to generate tasks 15 days before this period finishes.</description>
    <formula>(Opportunity__r.Renewal_Date__c -  Provider_Notice_Period_Not_To_Renew__c) - 15</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula field that contains the date that is 15 days before the provider notice period not to renew. This is used in the reports to generate tasks 15 days before this period finishes.</inlineHelpText>
    <label>15 Days Before Notice Period Date</label>
    <type>Date</type>
</CustomField>